# STRIPE-kit

./: .gitignore  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: python-publish.yml  static.yml
doc/source/: architecture.rst  conf.py  generation.rst  index.rst  installation.rst  stripe_kit.rst
src/neuroforgelab/: __init__.py  asset.py  asset_spec.py  env.py  factory.py  mesh.py  scene_spec.py  terrain.py  terrain_spec.py
src/neuroforgelab/scripts/: train.py
stripe_kit/: __init__.py  asset.py  env.py  factory.py  materials.py  mesh.py  scene_spec.py  terrain.py
tests/: test_factory.py
