[tool.black]
line-length = 80
include = '\.pyi?$'

[project]
name = "neuroforgelab"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.10.*"
dependencies = []

[tool.setuptools]
packages = ["neuroforgelab"]
package-dir = { "" = "src" }

[tool.pyright]
reportUnusedCallResult = false
reportAny = false
reportUnannotatedClassAttribute = false
reportCallInDefaultInitializer = "hint"
reportMissingTypeStubs = "hint"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportExplicitAny = "hint"
reportUnknownVariableType = "hint"
reportPrivateLocalImportUsage = "hint"

[project.optional-dependencies]
dev = ["black"]
test = ["unittest"]

[project.scripts]
skrl_train = "neuroforgelab.scripts.train:main"

[project.urls]
Repository = "https://github.com/GrafCzterech/NeuroForgeLab"
