[tool.black]
line-length = 80
include = '\.pyi?$'

[project]
name = "stripe_kit"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pyright]
reportUnusedCallResult = false
reportAny = false
reportUnannotatedClassAttribute = false
reportCallInDefaultInitializer = "hint"
reportMissingTypeStubs = "hint"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportExplicitAny = "hint"
reportUnknownVariableType = "hint"
reportPrivateLocalImportUsage = "hint"
reportImplicitOverride = "hint"

[project.optional-dependencies]
dev = ["black"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.scripts]
skrl_train = "stripe_kit.scripts.train:main"

[project.urls]
Repository = "https://github.com/GrafCzterech/STRIPE-kit"
